--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^1.4.2",
     "@material-ui/icons": "^2.0.0",
+    "material-ui-chip-input": "^1.0.0-beta.6",
+    "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-text-mask": "^5.4.3",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
