--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
     "react-text-mask": "^5.4.3",
+    "typeface-roboto": "0.0.54",
     "underscore": "^1.9.1"
   },
   "scripts": {
